sfdx-source/cozycub/main/default/objects/Round_Dashboard__c/Round_Dashboard__c.object-meta.xml
<CustomObject>
    <label>Round Dashboard</label>
    <nameField>
        <displayFormat>RD-{0}</displayFormat>
        <label>Round Dashboard Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Round Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>