sfdx-source/cozycub/main/default/objects/Round_Dashboard__c/fields/Dice__c.field-meta.xml
<CustomField>
    <fullName>Dice__c</fullName>
    <label>Dice</label>
    <length>20</length>
    <type>Text</type>
</CustomField>