sfdx-source/cozycub/main/default/objects/Round_Dashboard__c/fields/Game_Id__c.field-meta.xml
<CustomField>
    <fullName>Game_Id__c</fullName>
    <label>Game Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>