sfdx-source/cozycub/main/default/objects/Round_Dashboard__c/fields/Game_Name__c.field-meta.xml
<CustomField>
    <fullName>Game_Name__c</fullName>
    <label>Game Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>