sfdx-source/cozycub/main/default/objects/Round_Dashboard__c/fields/Player_Id__c.field-meta.xml
<CustomField>
    <fullName>Player_Id__c</fullName>
    <label>Player Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>